--- a/templates/add_a_guest.html
+++ b/templates/add_a_guest.html
@@ -27,6 +27,12 @@
     </div>
 </form>
 
-<a href="/party_profile/{{ party.party_id }}">Thanks, I'm done adding guests.</a>
+<li style="list-style-type:none"><button type="button" id="addIngred">Add a guest that is not yet a friend</button></li>
+
+
+
 </div>
+
+
+
 {% endblock %}
