--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <title>Kind Table</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/site.css">
+    <script src="http://code.jquery.com/jquery.js"></script>
 </head>
 
 
@@ -18,14 +19,33 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">K(i)nd Table</a>
+          <a class="navbar-brand" href="/">Kind Table</a>
         </div>
 
 
      <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-            <li><a href="/userprofile">My profile</a></li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Quickstart<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                      <li><a href="/userprofile">My Profile</a></li>
+                      <li><a href="/findfriend">Add a new friend</a></li>
+                      <li><a href="/addaparty">Create a party</a></li>
+                    </ul>
+                </li>
+          <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Friends<span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                  {% for friend in this_user.friends %}
+                                    <li><a href="/friendprofile/{{ friend.friends.user_id }}">{{ friend.friends.first_name }} {{ friend.friends.last_name }} ({{ friend.friends.email }})</a></li>
+                                  {% endfor %}
+                                </ul>
+                                              
+                </li>
+
+
+
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Parties<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
@@ -35,19 +55,29 @@
                                 </ul>
                                               
                 </li>
+
+            </ul>    
+                <ul class="nav navbar-nav navbar-right">
                 <li><a href="/logout">Log out</a></li>
                 </ul>
-                        <ul class="nav navbar-nav navbar-right">
-                          {% for flash in get_flashed_messages() %}
-            <li><h4><span class="label label-danger">{{  flash  }}</h4></span></li>
-            {% endfor %}
 
-         </ul>
     </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
+                  
+
+        
 
 <div class="container-fluid">
+
+                          {% with messages = get_flashed_messages(with_categories=true) %}
+                          {% if messages %}
+                        {% for category, message in messages %}
+                          <div class="alert alert-{{ category }}">{{ message }}</div>
+                        {% endfor %}
+                        </ul>
+                          {% endif %}
+                        {% endwith %}
 
 
     <div id="extending">
@@ -56,7 +86,7 @@
     {% endblock %}
     </div>
 
-    <script src="http://code.jquery.com/jquery.js"></script>
+
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </div>
 </body>
