--- a/templates/create_friends_profile_form.html
+++ b/templates/create_friends_profile_form.html
@@ -8,34 +8,31 @@
     <div class="form-group">
         <label>
             <strong>Email address</strong> (required): <input type="text" name="email" value={{ email_address }} class="form-control" required>
-    
-            Friend's first name (optional):
-            <input type="text" name="first_name" class="form-control">
-  
-            Friend's last name (optional):
-            <input type="text" name="last_name" class="form-control">
+        
+                Friend's first name (optional):
+                <input type="text" name="first_name" class="form-control">
+      
+                Friend's last name (optional):
+                <input type="text" name="last_name" class="form-control">
 
 
-            <h4><strong>Diet your friend prefers to eat (required):</strong></h4>
-            
-            <select name="diet_type">
-                {% for diet in diets %}
-                <option value={{ diet.diet_id }}>{{ diet.diet_type }}</option>
-                {% endfor %}
-            </select><br>
-            Reason they follow this diet (optional):<br>
-            <input type="text" name="diet_reason" class="form-control">
+                <h4><strong>Diet your friend prefers to eat (required):</strong></h4>
+                
+                <select name="diet_type">
+                    {% for diet in diets %}
+                    <option value={{ diet.diet_id }}>{{ diet.diet_type }}</option>
+                    {% endfor %}
+                </select><br>
+                Reason they follow this diet (optional):<br>
+                <input type="text" name="diet_reason" class="form-control">
 
-            </label>
-        </div>
-
-
-    <div class="form-group">
-        <input type="submit" value="Create friend profile" class="btn">
+                  
+            </div><br>
+            <div class="form-group">
+                <input type="submit" value="Create friend profile" class="btn">
+            </div>
+        </label>
     </div>
-
-    <a href="/userprofile">Thanks, I'm done creating friend profiles</a>
-
 </form>
 </div>
 {% endblock %}
