--- a/templates/user_profile_page.html
+++ b/templates/user_profile_page.html
@@ -1,41 +1,149 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="well spaced">
+<div class="well spaced">  <!-- 1 -->
 <h1>{{ this_user.first_name }} {{ this_user.last_name }}</h1>
-
 <ul>
     <li>Email address: {{ this_user.email }}</li>
     <li>Diet: {{ this_user.diet.diet_type }}</li>
     <li>Diet Reason: {{ this_user.diet_reason }}</li>
     <li>Intolerances:</li>
         <ul>
-            {% for intolerance in this_user.intolerances %}    
-            <li>{{ intolerance.intol_name }}</li>
+            <li>{% for intolerance in this_user.intolerances %} 
+                {{ intolerance.intol_name }}
+                {% if not loop.last %}
+                    ,
+                {% endif %}
                 {% endfor %}
-            <li><a href="/addintoleranceform">Add an intolerance/allergy</a></li>
+            </li>
+        
+
+<li style="list-style-type:none">
+
+    <button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#Intols">Add an intolerance/allergies</button>
+
+    <!-- Modal -->
+    <div id="Intols" class="modal fade" role="dialog">
+         <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Add intolerances/allergies</h4>
+                </div>
+                      <div class="modal-body">
+                        <form action="/intolerance_added" method="POST">
+                            <div class="form-group">
+                                <label>
+                                    <p>Select all that apply:</p>
+                                            {% for intolerance in intol_list %}  
+                                        <input type="checkbox" name="intol_ids" value="{{ intolerance.intol_id }}">   {{ intolerance.intol_name }}<br>
+                                            {% endfor %}
+                                </label>
+                            </div>
+                            <div class="form-group">
+                                <input type="submit" value="Done" class="btn" id="intolDone">
+                            </div>
+                        </form>
+                      </div>
+
+            </div>
+
+        </div>
+    </div>
+</li>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         </ul>
     <li>Ingredients to avoid:</li>
         <ul>
-            {% for avoid in this_user.avoidances %}
-            <li>{{ avoid.ingredient }}</li>
-            <li style="list-style-type:none">Reason: {{ avoid.reason}}</li>
-            {% endfor %}
-            <li><a href="/addingredienttoavoid">Add an ingredient you would like to avoid</a></li>
-        </ul> 
-    <li>Friends:</li>
-        <ul>{% for person in this_user.friends %}    
-            <li><a href="/friendprofile?friends_id={{ person.friends.user_id }}">
-                {{ person.friends.first_name }} {{ person.friends.last_name}} ({{ person.friends.email }})</a> </li>
+                {% for avoid in this_user.avoidances %}
+            <li>{{ avoid.ingredient }} (<i>{{ avoid.reason}}</i>)</li>
                 {% endfor %}
-            <li><a href="/findafriend">Add more friends.</a></li>
-        </ul>
-    </li>    
-    <li>Parties:</li>
-        <ul>{% for party in this_user.parties %}
-                    <li><a href="/party_profile/{{ party.party_id }}">
-                {{ party.title }}</a> 
-                {% endfor %}</li>
-            <li><a href="/addaparty">Add another party.</a></li></ul>
+            <li style="list-style-type:none">
 
+<button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#IngToAvoid">Add an ingredient you would like to avoid</button>
+
+<!-- Modal -->
+<div id="IngToAvoid" class="modal fade" role="dialog">
+     <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Add an ingredient you would like to avoid</h4>
+            </div>
+                  <div class="modal-body">
+                    <form action="/ingredientadded" method="POST">
+                        <div class="form-group">
+                            <label>
+                                <p>Ingredient to avoid:</p>
+                                    <input type="text" name="ingredient" class="form-control">
+                                <p>Reason you would like to avoid this ingredient (optional):</p>
+                                    <input type="text" name="reason" class="form-control">
+                            </label>
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="Done" class="btn" id="avoidDone">
+                        </div>
+                    </form>
+                  </div>
+
+        </div>
+
+    </div>
 </div>
+
+</li>
+
+
+
+
+
+
+
+    <li>Friends:</li>
+        <ul>
+            {% for person in this_user.friends %}    
+                <li><a href="/friendprofile/{{ person.friends.user_id }}">{{ person.friends.first_name }} {{ person.friends.last_name}} ({{ person.friends.email }})</a>
+             {% endfor %}       
+        </ul>
+    <li>Parties:</li>
+        <ul>
+            {% for party in this_user.parties %}
+                <li>
+                    <a href="/party_profile/{{ party.party_id }}">{{ party.title }}</a> 
+                </li>
+            {% endfor %}
+
+</div> <!-- 1 -->
+
+<script>
+"use strict";
+    $("#addIntol").click(function(){
+            $("#addIntol").hide();
+            $("#addIntolForm").toggle();
+            console.log("show form");
+    });
+
+    $("#addIngred").click(function(){
+            $("#addIngred").hide();
+            $("#addAvoidForm").toggle();
+            console.log("show form");
+    });
+
+</script>
 {% endblock %}
