--- a/static/site.css
+++ b/static/site.css
@@ -15,6 +15,46 @@
     font-weight: bold
 }
 
-.form-group{
+.form-group {
     display: inline-block;
+}
+
+.background {
+background:url('static/background.jpg')no-repeat;
+background-size:100%;
+height: 140px;
+display:block;
+padding:0;
+margin:0;
+}
+
+.recipe_results {
+    border: 1px dotted gray;
+    padding: 30px;
+}
+
+.recipe {
+  padding: 15px;
+}
+
+.displayed {
+    display: block;
+    margin-left: auto;
+    margin-right: auto }
+
+.display_guest{
+    background-size:50% auto;
+    height: 30em;
+    width: 100%;
+    background:url('/static/plate-blue.jpg') no-repeat center center;
+}
+
+.guest_name {
+    color: black;
+    font-weight: bold; 
+    left: 0;
+    text-align:center;
+    margin-top: 120px;
+    width: 100%;
+
 }
