--- a/templates/find_a_friend.html
+++ b/templates/find_a_friend.html
@@ -6,7 +6,7 @@
     <div class="form-group">
         <label>
             <h4>New friend to add:</h4>
-            <p>Email address: <input type="text" name="email_address" class="form-control"><p>
+            <p>Email address: <input type="email" name="email_address" class="form-control"><p>
         </label>
     </div>
 
